--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV = development
 PORT = 5000
 MONGO_URI = mongodb+srv://david95kr:950508kr@cluster0.iinxg.mongodb.net/proshop?retryWrites=true&w=majority
 JWT_SECRET = abc123
+PAYPAL_CLIENT_ID = AeKKA-r9ST3xBST1Q_k7z6IAJnRhhTPcbSeY26Bgj5X8rkdaY3XMxkbp2E4dvmi8KaMEM-fJ-aTgdYsQ
